<resources>
    <string name="app_name">Revisory Control</string>

    <string name="tv_your_profile">Your profile</string>


    <string name="tv_employees">Employees</string>

    <string name="tv_profile">Profile</string>

    <string name="tv_firstname">First name:</string>

    <string name="tv_lastname">Last name:</string>

    <string name="tv_email">E-mail:</string>

    <string name="tv_department">Department:</string>

    <string name="tv_schedule">Schedule:</string>

    <string name="btn_logout">Log out</string>
    <string name="logout_dialog_title">Log out confirmation</string>
    <string name="logout_dialog_message">Are you sure want to log out from the system?</string>
    <string name="logout_dialog_btn_positive">Yes</string>
    <string name="logout_dialog_btn_negative">No</string>
    <string name="logout_dialog_success">Successfully logged out</string>


    <string name="hint_password">Password</string>

    <string name="hint_email">E-mail</string>

    <string name="hint_lastname">Last name</string>

    <string name="hint_firstname">First name</string>

    <string name="btn_sign_in">Sign In</string>

    <string name="tv_sign_up">Register</string>

    <string name="tv_sign_in">Have an account? Sign in!</string>

    <string name="btn_sign_up">Sign Up</string>


    <string name="tv_working_days">Working days:</string>

    <string name="hint_department">Department unset</string>

</resources>